--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&display=swap" rel="stylesheet">
   <link href="styles/all.css" rel="stylesheet">
   <link rel="stylesheet" href="styles/main.css">
-  <title>Mohammad Yosef</title>
+  <title>Swalha</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
   <div id="app">
   </div>
 
-  <script type="module" src="scripts/main.js"></script>
+  <script type="module" src="index.js"></script>
 </body>
 
 </html>
